--- a/server/package.json
+++ b/server/package.json
@@ -23,12 +23,14 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@types/mysql": "^2.15.21",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1"
   }
 }
