--- a/appspec.yml
+++ b/appspec.yml
@@ -7,9 +7,9 @@ hooks:
   ApplicationStop:
     - location: scripts/stop.sh
       runas: root
-  ApplicationInstall:
-    - location: scripts/initialize.sh
-      runas: root
-  ApplicationStart:
-    - location: scripts/start.sh
-      runas: root
+  # ApplicationInstall:
+  #   - location: scripts/initialize.sh
+  #     runas: root
+  # ApplicationStart:
+  #   - location: scripts/start.sh
+  #     runas: root
