--- a/appspec.yml
+++ b/appspec.yml
@@ -7,7 +7,7 @@ hooks:
   ApplicationStop:
     - location: scripts/stop.sh
       runas: root
-  ApplicationInstall:
+  AfterInstall:
     - location: scripts/initialize.sh
       runas: root
   ApplicationStart:
