--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,17 +3,22 @@
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "logo_32.ico",
+      "src": "images/logo/logo_32.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo_192.png",
+      "src": "images/logo/logo_192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo_512.png",
+      "src": "images/logo/logo_192b.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "images/logo/logo_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
