--- a/server/package.json
+++ b/server/package.json
@@ -20,13 +20,14 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/multer": "^1.4.7",
-    "@types/multer-s3": "^3.0.0",
+    "@types/multer-s3": "^2.7.12",
     "@types/mysql": "^2.15.21",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.130.0",
     "aws-sdk": "^2.1174.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
@@ -36,8 +37,8 @@
     "express": "^4.18.1",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
-    "multer-s3": "^3.0.1",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "mysql": "^2.18.1"
   }
 }
